--- a/P007101.opf/layers/v001/Pagination.yml
+++ b/P007101.opf/layers/v001/Pagination.yml
@@ -1,5 +1,5 @@
 id: 3ba51987ed684b709adb02e0a7ea82c1
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   03c2855698e145a6b881815cc8cb8ec8:
