--- a/P007101.opf/meta.yml
+++ b/P007101.opf/meta.yml
@@ -1,5 +1,7 @@
 id: P007101
 initial_creation_type: ocr
+created_at: 31/03/2020
+last_modified_at: 25/11/2021
 source_metadata:
   id: bdr:W1KG24018
   title: དགའ་ལྡན་ཤར་རྩེའི་ཆོས་སྤྱོད་མཛད་རིམ།
@@ -11,10 +13,3 @@ source_metadata:
       volume_number: 1
       total_pages: 314
       base_file: v001.txt
-ebook_metadata:
-  title: དགའ་ལྡན་ཤར་རྩེའི་ཆོས་སྤྱོད་མཛད་རིམ།
-  author: ''
-  sku: P007101
-  cover: cover.jpg
-  layers:
-  - pagination
