--- a/P007101.opf/meta.yml
+++ b/P007101.opf/meta.yml
@@ -1,7 +1,7 @@
 id: P007101
 initial_creation_type: ocr
 created_at: 31/03/2020
-last_modified_at: 25/11/2021
+last_modified_at: 2021-12-17 12:41:42.004403
 source_metadata:
   id: bdr:W1KG24018
   title: དགའ་ལྡན་ཤར་རྩེའི་ཆོས་སྤྱོད་མཛད་རིམ།
@@ -13,3 +13,5 @@ source_metadata:
       volume_number: 1
       total_pages: 314
       base_file: v001.txt
+  access: http://purl.bdrc.io/admindata/AccessOpen
+  restrictedInChina: true
